@@ -1,7 +1,7 @@
 ﻿
 Microsoft Visual Studio Solution File, Format Version 12.00
-# Visual Studio 15
-VisualStudioVersion = 15.0.27004.2009
+# Visual Studio Version 16
+VisualStudioVersion = 16.0.29324.140
 MinimumVisualStudioVersion = 10.0.40219.1
 Project("{2150E333-8FDC-42A3-9474-1A3956D46DE8}") = "Solution Items", "Solution Items", "{B3AFFD69-36B4-43D6-A6AA-72914D15055C}"
 	ProjectSection(SolutionItems) = preProject
@@ -63,6 +63,8 @@ Project("{2150E333-8FDC-42A3-9474-1A3956D46DE8}") = "Src", "Src", "{795CD637-D3F
 	ProjectSection(SolutionItems) = preProject
 		src\Common.props = src\Common.props
 	EndProjectSection
+EndProject
+Project("{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}") = "LightBDD.XUnit2.IntegrationTests", "test\LightBDD.XUnit2.IntegrationTests\LightBDD.XUnit2.IntegrationTests.csproj", "{B958A138-9556-4AB4-9B63-D113F0309454}"
 EndProject
 Global
 	GlobalSection(SolutionConfigurationPlatforms) = preSolution
@@ -380,6 +382,22 @@ Global
 		{C1B0A7BC-AF9F-4039-8540-231ECDD30AAF}.Release|x64.Build.0 = Release|Any CPU
 		{C1B0A7BC-AF9F-4039-8540-231ECDD30AAF}.Release|x86.ActiveCfg = Release|Any CPU
 		{C1B0A7BC-AF9F-4039-8540-231ECDD30AAF}.Release|x86.Build.0 = Release|Any CPU
+		{B958A138-9556-4AB4-9B63-D113F0309454}.Debug|Any CPU.ActiveCfg = Debug|Any CPU
+		{B958A138-9556-4AB4-9B63-D113F0309454}.Debug|Any CPU.Build.0 = Debug|Any CPU
+		{B958A138-9556-4AB4-9B63-D113F0309454}.Debug|ARM.ActiveCfg = Debug|Any CPU
+		{B958A138-9556-4AB4-9B63-D113F0309454}.Debug|ARM.Build.0 = Debug|Any CPU
+		{B958A138-9556-4AB4-9B63-D113F0309454}.Debug|x64.ActiveCfg = Debug|Any CPU
+		{B958A138-9556-4AB4-9B63-D113F0309454}.Debug|x64.Build.0 = Debug|Any CPU
+		{B958A138-9556-4AB4-9B63-D113F0309454}.Debug|x86.ActiveCfg = Debug|Any CPU
+		{B958A138-9556-4AB4-9B63-D113F0309454}.Debug|x86.Build.0 = Debug|Any CPU
+		{B958A138-9556-4AB4-9B63-D113F0309454}.Release|Any CPU.ActiveCfg = Release|Any CPU
+		{B958A138-9556-4AB4-9B63-D113F0309454}.Release|Any CPU.Build.0 = Release|Any CPU
+		{B958A138-9556-4AB4-9B63-D113F0309454}.Release|ARM.ActiveCfg = Release|Any CPU
+		{B958A138-9556-4AB4-9B63-D113F0309454}.Release|ARM.Build.0 = Release|Any CPU
+		{B958A138-9556-4AB4-9B63-D113F0309454}.Release|x64.ActiveCfg = Release|Any CPU
+		{B958A138-9556-4AB4-9B63-D113F0309454}.Release|x64.Build.0 = Release|Any CPU
+		{B958A138-9556-4AB4-9B63-D113F0309454}.Release|x86.ActiveCfg = Release|Any CPU
+		{B958A138-9556-4AB4-9B63-D113F0309454}.Release|x86.Build.0 = Release|Any CPU
 	EndGlobalSection
 	GlobalSection(SolutionProperties) = preSolution
 		HideSolutionNode = FALSE
@@ -406,6 +424,7 @@ Global
 		{C1B0A7BC-AF9F-4039-8540-231ECDD30AAF} = {A7491D1D-7E5B-4021-8105-4098683807EB}
 		{82B10F43-3A68-401C-99AB-515D409F6CD3} = {795CD637-D3F6-44AB-A408-AA89B7C18356}
 		{527D4497-4F9D-474C-93C7-773D6D48FCF3} = {795CD637-D3F6-44AB-A408-AA89B7C18356}
+		{B958A138-9556-4AB4-9B63-D113F0309454} = {A7491D1D-7E5B-4021-8105-4098683807EB}
 	EndGlobalSection
 	GlobalSection(ExtensibilityGlobals) = postSolution
 		SolutionGuid = {0768D221-78A3-4008-968F-3A4D4E43A7D8}
