@@ -10,7 +10,6 @@ namespace LightBDD.XUnit2
     /// Attribute allowing to ignore scenario in declarative way. It can be applied on scenario method or step method as well as feature class.
     /// If applied on scenario, no steps will be executed, but scenario will be included in reports.
     /// If applied on class level, all scenarios in this class will get ignored.
-    /// It is recommended to use this attribute in favor of <see cref="ScenarioAttribute.Skip"/>.
     /// </summary>
     [AttributeUsage(AttributeTargets.Method | AttributeTargets.Class)]
     public class IgnoreScenarioAttribute : Attribute, IScenarioDecoratorAttribute, IStepDecoratorAttribute
